# component-classifier

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
labelstudio/: start.py
src/component_classifier/: ablation_study.py  data_analysis.py  data_utils.py  dataset_study.py  main.py  occ_study.py  train_loop_builder.py  train_utils.py
src/component_classifier/one_time_scripts/: gradcam.py  img_to_tensor.py  labelstudio.py  labelstudio_annotation_to_df.py  scrape_imgs.py  to_features.py  train_test_split.py
