[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "component_classifier"
version = "0.0.0"
description = "An RnD project investigating capabilities of pretrained models for classifying engine components"
requires-python = ">=3.10"
authors = [
  { name = "Christoffer Ebbe Sommerlund", email = "chriso-99@hotmail.com" },
  { name = "Thomas Fosdam Claudinger", email = "thcl@itu.dk" },
]
dependencies = [
  "pip>=23",
  "torch==2.1.0",
  "torchmetrics==1.2.0",
  "torchvision==0.16.0",
  "pandas==2.1.2",
  "polars==0.19.12",
  "scikit-learn==1.3.2",
  "panel==1.3.0",
  "hvplot==0.9.0",
  "holoviews==1.18.0",
  "transformers==4.34.1",
  "tqdm==4.66.1",
  "mlflow==2.7.1",
  "mirror @ git+https://github.com/FrancescoSaverioZuppichini/mirror.git",
  "pyod",
  "ipykernel",
  "ipywidgets",
  "selenium",
]

[tool.black]
target-version = ["py310"]
line-length = 120

[project.scripts]
# hello-world = "component_classifier.filename:func_name"

[tool.setuptools.package-data]
# component_classifier = ["data/img.png"]